--- a/BeastTuners/Views/Home/Index.cshtml
+++ b/BeastTuners/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
                     <a asp-controller="Parts" asp-action="Category" asp-route-category="Engine">
-                        <img src="~/images/engine.jpg" class="card-img-top img-fluid part-image" alt="Engine">
+                        <img src="~/images/Enginecam.jpg" class="card-img-top img-fluid part-image" alt="Engine">
                     </a>
                     <div class="card-body text-center">
                         <a asp-controller="Parts" asp-action="Category" asp-route-category="Engine" class="btn btn-primary">Engine Parts</a>
@@ -34,7 +34,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
                     <a asp-controller="Parts" asp-action="Category" asp-route-category="Wheels">
-                        <img src="~/images/wheels.jpg" class="card-img-top img-fluid part-image" alt="Wheels">
+                        <img src="~/images/RaptorWheels1.jpg" class="card-img-top img-fluid part-image" alt="Wheels">
                     </a>
                     <div class="card-body text-center">
                         <a asp-controller="Parts" asp-action="Category" asp-route-category="Wheels" class="btn btn-primary">Wheel Parts</a>
@@ -67,7 +67,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
                     <a asp-controller="Parts" asp-action="Category" asp-route-category="Interior">
-                        <img src="~/images/interior.jpg" class="card-img-top img-fluid part-image" alt="Interior">
+                        <img src="~/images/RaptarInterior.jpg" class="card-img-top img-fluid part-image" alt="Interior">
                     </a>
                     <div class="card-body text-center">
                         <a asp-controller="Parts" asp-action="Category" asp-route-category="Interior" class="btn btn-primary">Interior Parts</a>
